# Drive-Rescue-Assistant

./: .gitignore  Package.swift  README.md  pyproject.toml
.github/workflows/: desktop-release.yml
DriveRescueAssistant.xcodeproj/: project.pbxproj
DriveRescueAssistant.xcodeproj/xcshareddata/xcschemes/: DriveRescueAssistant.xcscheme
assets/brand/: README.md
docs/: DESIGN_SPEC.md  DISCLAIMER.md  FRIEND_TEST_GUIDE.md  GITHUB_RELEASE_TESTING.md  MACOS_SIGNING_NOTARIZATION.md  MAC_APP_STORE_COMPARISON.md  MAC_APP_UI.md  PLATFORM_SUPPORT.md  PRIVACY.md  PRODUCT_ROADMAP.md  SAFETY.md  STORE_AND_PLATFORM_PLAN.md  TESTER_INVITE_MESSAGE.md  TROUBLESHOOTING.md  V0.4_RELEASE_CHECKLIST.md  WINDOWS_STORE_SUBMISSION.md
docs/store/: apple-app-store.md  google-play.md
macos/DriveRescueAssistant/App/: DriveRescueAssistantApp.swift
macos/DriveRescueAssistant/Models/: AppStatus.swift  Drive.swift  ExtractionScope.swift
macos/DriveRescueAssistant/Resources/: Info.plist
macos/DriveRescueAssistant/Services/: DriveRescueCLI.swift
macos/DriveRescueAssistant/Stores/: DriveStore.swift
macos/DriveRescueAssistant/Support/: Formatters.swift  ProjectPaths.swift
macos/DriveRescueAssistant/Views/: ContentView.swift  DetailRow.swift  DetailView.swift  DriveDetailContent.swift  SidebarView.swift  (+2 more)
script/: build_and_run.sh  build_macos_engine.sh  cli_entry.py  desktop_entry.py  package_friend_test.sh  package_macos_release.sh  package_windows_store.ps1
src/drive_rescue/: __init__.py  cli.py  gui.py
tests/: test_extractor.py  test_safety.py
windows/store/: AppxManifest.xml
(+5 files in other folders)
